# Logic_ANTLR

./: .gitignore  CMakeLists.txt  Readme.md
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: antlr4-install.md
examples/: run_tests.sh
examples/invalid/: 01_unknown_token.example  02_missing_operator.example  03_unbalanced_parens.example  04_empty_parens.example
examples/valid/: 03_not_true.example  04_double_not.example  05_and.example  06_or.example  07_parens.example  08_complex.example  09_nested.example
grammar/: LogicGrammar.g4
src/: AST.cpp  AST.h  LogicInterpreter.cpp  LogicInterpreter.h  main.cpp
